syntax = "proto3";

option go_package = "types.proto";

message Block {
    Header header = 1;
    repeated Transaction transactions = 2;
}

message Header {
    int32 version = 1;
    int32 height = 2;
    bytes previousHash = 3;
    bytes rootHash = 4;
    int64 timestamp = 5;
}

message TxInput {
    bytes prevHash = 1;
    uint32 prevOutIndex = 2;
    bytes publicKey = 3;
    bytes signature = 4;
}

message TxOutput {
    // this is the address of the money goes to.
    bytes address = 1;
    // amount of the money
    int64 amount = 2;
}

message Transaction {
    int32 version = 1;
    repeated TxInput inputs = 2;
    repeated TxOutput outputs = 3;
}

